# obtrace-sdk-python

./: .gitignore  README.md  llm.txt  mcp.json  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  dependabot-automerge.yml  release.yml  security.yml
docs/: configuration.md  frameworks.md  getting-started.md  http-instrumentation.md  index.md  mcp.md  security.md  troubleshooting.md
examples/: basic.py
src/obtrace_sdk/: __init__.py  auto_http.py  client.py  context.py  http.py  logging_handler.py  otel_setup.py  otlp.py  semantic_metrics.py  types.py
src/obtrace_sdk.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/obtrace_sdk_python.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_auto_http.py  test_client.py  test_context.py  test_semantic_metrics.py
