[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "obtrace-sdk-python"
version = "1.0.0"
description = "Obtrace Python SDK"
license = "MIT"
requires-python = ">=3.10"
readme = "README.md"
authors = [{ name = "Obtrace" }]
dependencies = []

[project.optional-dependencies]
requests = ["requests>=2.31.0"]
httpx = ["httpx>=0.27.0"]
fastapi = ["fastapi>=0.112.0", "starlette>=0.37.0"]
flask = ["flask>=3.0.0"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
