[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "obtrace-sdk-python"
version = "2.0.0"
description = "Obtrace Python SDK"
license = "MIT"
requires-python = ">=3.10"
readme = "README.md"
authors = [{ name = "Obtrace" }]
dependencies = [
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-api>=1.20.0",
    "opentelemetry-exporter-otlp-proto-http>=1.20.0",
]

[project.optional-dependencies]
auto = [
    "opentelemetry-instrumentation-requests",
    "opentelemetry-instrumentation-httpx",
    "opentelemetry-instrumentation-urllib",
    "opentelemetry-instrumentation-flask",
    "opentelemetry-instrumentation-fastapi",
    "opentelemetry-instrumentation-django",
    "opentelemetry-instrumentation-logging",
    "opentelemetry-instrumentation-psycopg2",
    "opentelemetry-instrumentation-redis",
    "opentelemetry-instrumentation-sqlalchemy",
    "opentelemetry-instrumentation-celery",
    "opentelemetry-instrumentation-grpc",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
